update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -102,7 +102,7 @@ class Solution {
 
 - `dp[i][1]`表示在第`i`天手上存在股票能够获得的最大的收益，比如我们在第一天买入股票之后收益为`-prices[0]`。
 
-那么我们最后的答案是`dp[N][0]`，这个表示在最后一天，我们的手中不存在股票，即我们将股票买出去能够获取的最大的收益。
+那么我们最后的答案是`dp[N][0]`，这个表示在最后一天，我们的手中不存在股票，即我们将股票卖出去能够获取的最大的收益。
 
 #### 状态转移方程
 
@@ -112,15 +112,37 @@ class Solution {
 
   - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，那么第`i`个状态也没有股票，那么直接是`dp[i][0] = dp[i - 1][0]`，因为没有进行交易。
   - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，那么如果想在第`i`个状态没有股票，那么就需要将股票卖出，那么收益就为`dp[i-1][1] +prices[i]`，即`dp[i][0] = dp[i-1][1] +prices[i]`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i])
+  $$
+
+  
 
 - `dp[i][1]`的状态如何进行转移：
 
   - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，那么`dp[i][0] = -prices[i]`，因为买入股票，而且只能够买入一次，因此直接等于`-prices[i]`即可，注意这里不能是`dp[i - 1][0] - prices[i]`，因为在`dp[i-][0]`当中可能存在先买入再卖出的情况，而题干要求只能买入卖出一次。
   - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，而第`i`个状态有股票，因此不需要进行交易，即`dp[i][1]=dp[i - 1][1]`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][1] = max(dp[i - 1][1], -prices[i]);
+  $$
 
   整个状态转移过程如下图所示：
 
   <img src="../images/dsal/dp/01-dp38.png" alt="01-dp38" style="zoom:80%;" />
+
+- 综合两种状态，整个转移方式如下：
+
+$$
+\begin{cases}dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i])\\
+            dp[i][1] = max(dp[i - 1][1], -prices[i]);
+            \end{cases}
+$$
+
+
 
 整个代码如下：
 
@@ -203,3 +225,66 @@ class Solution {
 >
 >解释：在第 1 天（股票价格 = 1）的时候买入，在第 5 天 （股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5 - 1 = 4 。
 >     总利润为 4 。
+
+这道题和第一题的区别就是，在这道题当中你可以买卖股票多次，但是最多只能持有一只股票，因此这道题和第一题的大多数情况是相同的。
+
+#### 状态表示数组
+
+在这个问题当中我们用一个二维数组去表示我们的状态，在这个问题当中主要有两个状态，一个是手上有股票，另一是手上没有股票：
+
+- `dp[i][0]`表示在第`i`天手上没有股票能够获得的最大的收益，比如我们在第一天的没有股票的收益为0元。
+
+- `dp[i][1]`表示在第`i`天手上存在股票能够获得的最大的收益，比如我们在第一天买入股票之后收益为`-prices[0]`。
+
+那么我们最后的答案是`dp[N][0]`，这个表示在最后一天，我们的手中不存在股票，即我们将股票卖出去能够获取的最大的收益。
+
+#### 状态转移方程
+
+现在我们来分析一下如何进行状态的转移：
+
+- `dp[i][0]`的状态如何从第`i-1`的状态转移过来：
+
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，那么第`i`个状态也没有股票，那么直接是`dp[i][0] = dp[i - 1][0]`，因为没有进行交易。
+  - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，那么如果想在第`i`个状态没有股票，那么就需要将股票卖出，那么收益就为`dp[i-1][1] +prices[i]`，即`dp[i][0] = dp[i-1][1] +prices[i]`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i])
+  $$
+
+  
+
+- `dp[i][1]`的状态如何进行转移：
+
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，这道题目和上一道题目只有这个地方是不一致的，在上一道题当中`dp[i][0] = -prices[i]`，这是因为只能够买入股票一次，而在这道题目当中，能够买卖股票多次，因此`dp[i][0] = dp[i - 1][0] - prices[i]`。
+  - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，而第`i`个状态有股票，因此不需要进行交易，即`dp[i][1]=dp[i - 1][1]`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+  $$
+
+- 综合上面的两个状态：
+
+$$
+\begin{cases}dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i])\\
+            dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+            \end{cases}
+$$
+
+参考代码如下：
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[][] dp = new int[2][2];
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; i++) {
+      dp[i & 1][0] = Math.max(dp[(i - 1) & 1][0], dp[(i - 1) & 1][1] + prices[i]);
+      dp[i & 1][1] = Math.max(dp[(i - 1) & 1][1], dp[i & 1][0] - prices[i]);
+    }
+    return dp[(prices.length - 1) & 1][0];
+  }
+}
+```
+
