update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -281,10 +281,28 @@ class Solution {
     dp[0][1] = -prices[0];
     for (int i = 1; i < prices.length; i++) {
       dp[i & 1][0] = Math.max(dp[(i - 1) & 1][0], dp[(i - 1) & 1][1] + prices[i]);
-      dp[i & 1][1] = Math.max(dp[(i - 1) & 1][1], dp[i & 1][0] - prices[i]);
+      dp[i & 1][1] = Math.max(dp[(i - 1) & 1][1], dp[(i - 1) & 1][0] - prices[i]);
     }
     return dp[(prices.length - 1) & 1][0];
   }
 }
+```
+
+#### 贪心解法
+
+因为我们可以无数次买入卖出，因此只要存在前一天的价格低于今天的价格，那么我们就可以在前一天买入，在今天卖出。
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int ans = 0;
+    int n = prices.length;
+    for (int i = 1; i < n; ++i) {
+      ans += Math.max(0, prices[i] - prices[i - 1]);
+    }
+    return ans;
+  }
+}
+
 ```
 
