--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -256,7 +256,7 @@ class Solution {
 
 - `dp[i][1]`的状态如何进行转移：
 
-  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，这道题目和上一道题目只有这个地方是不一致的，在上一道题当中`dp[i][0] = -prices[i]`，这是因为只能够买入股票一次，而在这道题目当中，能够买卖股票多次，因此`dp[i][0] = dp[i - 1][0] - prices[i]`。
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，这道题目和上一道题目只有这个地方是不一致的，在上一道题当中`dp[i][0] = -prices[i]`，这是因为只能够买入股票一次，具体原因是在`dp[i - 1][0]`当总可以存在股票买入，而且已经卖出这种情况，而第一题只能买入卖出一次，而在这道题目当中，能够买卖股票多次，因此`dp[i][0] = dp[i - 1][0] - prices[i]`。
   - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，而第`i`个状态有股票，因此不需要进行交易，即`dp[i][1]=dp[i - 1][1]`。
   - 综合上面的两种转移方式可以得到下面的转移方程：
 
@@ -292,7 +292,10 @@ class Solution {
 
 因为我们可以无数次买入卖出，因此只要存在前一天的价格低于今天的价格，那么我们就可以在前一天买入，在今天卖出，在这种情况下我们的收益就是最大的，因为我们抓住了“每一次赚钱的机会”。
 
-比如`prices=[1, 2, 3]`，我们的收益就等于`(2 - 1) + (3 - 2) = 2`，这个过程相当于在第一天买入，第二天卖出，第二天再买入（注意题目当中说明了一天可以同时买入和卖出，只需要保证手上的股票不超过两个），第三天卖出。
+- 比如`prices=[1, 2, 3]`，我们的收益就等于`(2 - 1) + (3 - 2) = 2`，这个过程相当于在第一天买入，第二天卖出，第二天再买入（注意题目当中说明了一天可以同时买入和卖出，只需要保证手上的股票不超过两个），第三天卖出。
+- 又比如`prices=[4, 5, 3, 6]`，我们的收益等于`(5 - 4) + 0 + (6 - 3) = 4`，这个过程相当于第一天买入第二天卖出，第三天再买入第四天卖出。
+
+代码如下：
 
 ```java
 class Solution {
