update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在本片文章当中主要通过介绍各种**股票问题**跟大家介绍**状态机动态规划**，主要了解在**股票问题**当中是如何在动态规划当中进行状态转移的。
+在本片文章当中主要通过介绍各种**股票问题**跟大家介绍**状态机动态规划**，主要了解在**股票问题**当中是如何在动态规划当中进行状态转移的。所谓状态机，就是有很多状态和他们之间的转移关系组成起来形成系统，这个说法看起来有点高大上，其实很简单，在后面讲动态规划的时候大家就明白了。
 
 ## [买卖股票的最佳时机I](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)
 
@@ -118,8 +118,6 @@ class Solution {
   dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i])
   $$
 
-  
-
 - `dp[i][1]`的状态如何进行转移：
 
   - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，那么`dp[i][0] = -prices[i]`，因为买入股票，而且只能够买入一次，因此直接等于`-prices[i]`即可，注意这里不能是`dp[i - 1][0] - prices[i]`，因为在`dp[i-][0]`当中可能存在先买入再卖出的情况，而题干要求只能买入卖出一次。
@@ -134,6 +132,8 @@ class Solution {
 
   <img src="../images/dsal/dp/01-dp38.png" alt="01-dp38" style="zoom:80%;" />
 
+上面所谈到的有两种状态，一种是有股票，一种是没有股票，这两种状态需要从第`i-1`行转移到第`i`行，即从第`i-1`行的有股票和无股票状态转移到第`i`行的有股票和无股票状态。你可能会问这好像跟之前传统的动态规划区别也不是太大啊，这是因为在这个问题当中只有两个状态，我们在下篇当中遇到的问题就会有多个状态了，在那个时候你可能就更加理解为什么称这种动态规划叫做**状态机动态规划**了。
+
 - 综合两种状态，整个转移方式如下：
 
 $$
@@ -141,8 +141,6 @@ $$
             dp[i][1] = max(dp[i - 1][1], -prices[i]);
             \end{cases}
 $$
-
-
 
 整个代码如下：
 
@@ -313,7 +311,7 @@ class Solution {
 
 ## 总结
 
-在本篇文章当中主要给大家介绍了两个股票问题，这两个问题比较中规中矩的方法就是使用动态规划，但是也可以使用贪心法巧妙求解。在本文当中最想跟大家介绍的还是**状态之间的转换**，但是在本文当中的两个问题当中涉及的状态还是比较少，下篇当中的题目状态会稍微多一点，可能大家理解起来更加容易一点！
+在本篇文章当中主要给大家介绍了两个股票问题，这两个问题比较中规中矩的方法就是使用动态规划，但是也可以使用贪心法巧妙求解。在本文当中最想跟大家介绍的还是**状态之间的转换**，但是在本文当中的两个问题当中涉及的状态还是比较少，只有含有股票和不含有股票两种状态，但是也可以看作状态机当中状态之间的转换。下篇当中的题目状态会稍微多一点，可能大家理解起来更加容易一点！
 
 ---
 
