update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在本片文章当中主要通过介绍各种**股票问题**跟大家介绍**状态机动态规划**，主要了解在**股票问题**当中是如何在动态规划当中进行状态转移的。所谓状态机，就是有很多状态和他们之间的转移关系组成起来形成系统，这个说法看起来有点高大上，其实很简单，在后面讲动态规划的时候大家就明白了。
+在本片文章当中主要通过介绍各种**股票问题**跟大家介绍**状态机动态规划**，主要了解在**股票问题**当中是如何在动态规划当中进行状态转移的，通过仔细剖析状态转移过程给大家介绍**状态机动态规划**。所谓状态机，就是有很多状态和他们之间的转移关系组成起来形成系统，这个说法看起来有点高大上，其实很简单，在后面讲动态规划解法的时候大家就明白了。
 
 ## [买卖股票的最佳时机I](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)
 
@@ -26,7 +26,7 @@
 
 ### 暴力解法
 
-在这个问题当中，我们的任务是在某一天买入股票，然后在未来某天再将股票卖出去，那么我们就可以用一个二重循环，第一层循环遍历每一天的股票，第二层循环遍历该天之后的股票，然后找到差值最大的那一天即可，也就是寻找某天后面价值最高的股票！
+在这个问题当中，我们的任务是在某一天买入股票，然后在未来某天再将股票卖出去，那么我们就可以用一个二重循环，第一层循环遍历每一天的股票，第二层循环遍历该天之后的股票，然后找到差值最大的那一天即可，也就是寻找某天后面价值最高的股票！通过做差得到差值，将差值最大的返回即可！
 
 ```java
 class Solution {
@@ -47,7 +47,7 @@ class Solution {
 
 ### 贪心解法
 
-在暴力解法当中我们思考的是寻找某天后面的最大值，在这个问题当中我们可以换一个角度，就是寻找某天前面股票价值最低的那一天，然后在那一天买进，在当天卖出即可，这个效果和上面暴力解法是一样的。这样的话我们可以用一个数组去存某一天前面价值最小的股票，然后做一个减法即可！这样的话我们可以将时间复杂度降低到$O(n)$。
+在暴力解法当中我们思考的是寻找某天后面的最大值，在这个问题当中我们可以换一个角度，就是寻找某天前面股票价值最低的那一天，然后在那一天买进，在当天卖出即可，这个效果和上面暴力解法是一样的。这样的话我们可以用一个数组`mins`去存某一天前面价值最小的股票，然后做一个减法即可，即`prices[i] - mins[i]`，这样我们就得到了在第`i`个位置卖出能够得到的最大的价值，那么我们再比较所有的这些值，我们就可以找到最后的答案了！这样的话我们可以将时间复杂度降低到$O(n)$。
 
 ```java
 class Solution {
@@ -83,13 +83,13 @@ class Solution {
 }
 ```
 
-我们在第一次遍历的时候可以顺便求出对应位置的能够获取的最大价值，可以避免第二次遍历。在这个情况下我们的时间复杂度为$O(n)$，空间复杂度为$O(1)$。
+我们在第一次遍历的时候可以用一个值`low`保存第`i`个位置左边最小的值即可，并且在遍历的过程当中不断更新`low`值，而且我们在遍历的时候可以顺便求出对应位置的能够获取的最大价值，可以避免第二次遍历。在这个情况下我们的时间复杂度为$O(n)$，空间复杂度为$O(1)$。
 
 ### 动态规划解法
 
 在求解动态规划问题的时候通常的步骤有一下几个：
 
-- 寻找能够表示状态的数组`dp`，即我们需要寻找`dp`的含义，分析需要用几纬数组表示。
+- 寻找能够表示状态的数组`dp`，即我们需要寻找`dp`的含义，分析需要用几纬数组表示具体的状态。
 - 通过分析问题，寻找动态转移公式。
 - 初始化状态数组。
 - 通过分析动态转移方程，确定数组的遍历顺序。
@@ -132,7 +132,7 @@ class Solution {
 
   <img src="../images/dsal/dp/01-dp38.png" alt="01-dp38" style="zoom:80%;" />
 
-上面所谈到的有两种状态，一种是有股票，一种是没有股票，这两种状态需要从第`i-1`行转移到第`i`行，即从第`i-1`行的有股票和无股票状态转移到第`i`行的有股票和无股票状态。你可能会问这好像跟之前传统的动态规划区别也不是太大啊，这是因为在这个问题当中只有两个状态，我们在下篇当中遇到的问题就会有多个状态了，在那个时候你可能就更加理解为什么称这种动态规划叫做**状态机动态规划**了。
+上面所谈到的有两种状态，一种是有股票，一种是没有股票，这两种状态需要从第`i-1`行转移到第`i`行，即从第`i-1`行的有股票和无股票状态转移到第`i`行的有股票和无股票状态，这就是我们在前文谈到的状态机，我们已经有了状态（是否持有股票），而且也有了状态之间的转换，这就是**状态机动态规划**。你可能会问这好像跟之前传统的动态规划区别也不是太大啊，这是因为在这个问题当中只有两个状态，我们在下篇当中遇到的问题就会有多个状态了，在那个时候你可能就更加理解为什么称这种动态规划叫做**状态机动态规划**了。
 
 - 综合两种状态，整个转移方式如下：
 
@@ -178,7 +178,7 @@ class Solution {
 }
 ```
 
-可以使用位运算稍微优化一下（下面代码优化的依赖原理$a \& (2^n - 1) = a \% 2^n$）：
+可以使用位运算稍微优化一下（下面代码优化的依赖原理：$a \& (2^n - 1) = a \% 2^n$）：
 
 ```java
 class Solution {
@@ -198,7 +198,7 @@ class Solution {
 
 ### 小结
 
-在上文当中主要介绍了**买卖股票的最佳时机I**各种解决办法，其中最主要想介绍的就是动态规划的方法了，而在动态规划当中最重要的就是状态之间如何进行转换，这个题中其实很像状态机中的状态转换，在这个问题当中只有两种状态之间的转换——有股票和没股票。
+在上文当中主要介绍了**买卖股票的最佳时机I**各种解决办法，其中最主要想介绍的就是动态规划的方法了，而在动态规划当中最重要的就是状态之间如何进行转换，这个题中其实很像状态机中的状态转换，在这个问题当中只有两种状态之间的转换——有股票和没股票，大家如果要弄明白**状态机动态规划**算法，那就需要深刻的去理解上面状态转换的过程。
 
 # [买卖股票的最佳时机 II](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-ii/)
 
