update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -1,8 +1,8 @@
-# 这种动态规划你见过吗——状态机动态规划(上)
+# 这种动态规划你见过吗——状态机动态规划之股票问题(上)
 
 ## 前言
 
-在本片文章当中主要通过介绍各种**股票问题**跟大家介绍**状态机动态规划**，主要了解在**股票问题**当中是如何在动态规划当中进行状态转移的，通过仔细剖析状态转移过程给大家介绍**状态机动态规划**。所谓状态机，就是有很多状态和他们之间的转移关系组成起来形成系统，这个说法看起来有点高大上，其实很简单，在后面讲动态规划解法的时候大家就明白了。
+在本篇文章当中主要通过介绍各种**股票问题**跟大家介绍**状态机动态规划**，主要了解在**股票问题**当中是如何在动态规划当中进行状态转移的，通过仔细剖析状态转移过程给大家介绍**状态机动态规划**。所谓状态机，就是有很多状态和他们之间的转移关系组成起来形成系统，这个说法看起来有点高大上，其实很简单，在后面讲动态规划解法的时候大家就明白了。
 
 ## [买卖股票的最佳时机I](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)
 
@@ -87,7 +87,7 @@ class Solution {
 
 ### 动态规划解法
 
-在求解动态规划问题的时候通常的步骤有一下几个：
+在求解动态规划问题的时候通常的步骤有以下几个：
 
 - 寻找能够表示状态的数组`dp`，即我们需要寻找`dp`的含义，分析需要用几纬数组表示具体的状态。
 - 通过分析问题，寻找动态转移公式。
@@ -254,7 +254,7 @@ class Solution {
 
 - `dp[i][1]`的状态如何进行转移：
 
-  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，这道题目和上一道题目只有这个地方是不一致的，在上一道题当中`dp[i][0] = -prices[i]`，这是因为只能够买入股票一次，具体原因是在`dp[i - 1][0]`当总可以存在股票买入，而且已经卖出这种情况，而第一题只能买入卖出一次，而在这道题目当中，能够买卖股票多次，因此`dp[i][0] = dp[i - 1][0] - prices[i]`。
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，这道题目和上一道题目只有这个地方是不一致的，在上一道题当中`dp[i][0] = -prices[i]`，这是因为只能够买入股票一次，具体原因是在`dp[i - 1][0]`当中可以存在股票买入，而且已经卖出这种情况，而第一题只能买入卖出一次，而在这道题目当中，能够买卖股票多次，因此`dp[i][0] = dp[i - 1][0] - prices[i]`。
   - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，而第`i`个状态有股票，因此不需要进行交易，即`dp[i][1]=dp[i - 1][1]`。
   - 综合上面的两种转移方式可以得到下面的转移方程：
 
