update state machine dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -4,3 +4,29 @@
 
 在前面的文章[这种动态规划你见过吗——状态机动态规划之股票问题(上)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485286&idx=1&sn=3d0a6a1c2e62ba770d8427c6dd732973&chksm=cf0c9b6ff87b1279d46c775001fd77b8e1437d4001a6c8a1ca8db090eadb4174af1058a1aadf&token=1125062744&lang=zh_CN#rd)我们已经介绍了两个基本的股票问题，并且对**状态机动态规划**做出了简要的介绍在动态规划当中**状态机**当中的状态是如何进行转换的，但是在前面的两个问题当中**状态**的个数比较少，可能不方便大家理解**状态机**的含义，在本篇文章所谈到的两个问题当中状态的数目还是比较多的，因此对于大家深入理解**状态机动态规划**可能会更方便简单一点。
 
+## [卖股票的最佳时机 III](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iii/)
+
+### 题目
+
+>给定一个数组，它的第 i 个元素是一支给定的股票在第 i 天的价格。设计一个算法来计算你所能获取的最大利润。你最多可以完成 两笔 交易。注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+### 示例
+
+示例1
+
+>输入：prices = [3,3,5,0,0,3,1,4]
+>
+>输出：6
+>
+>解释：在第 4 天（股票价格 = 0）的时候买入，在第 6 天（股票价格 = 3）的时候卖出，这笔交易所能获得利润 = 3-0 = 3 。
+>     随后，在第 7 天（股票价格 = 1）的时候买入，在第 8 天 （股票价格 = 4）的时候卖出，这笔交易所能获得利润 = 4-1 = 3 。
+
+示例2
+
+>输入：prices = [1,2,3,4,5]
+>
+>输出：4
+>
+>解释：在第 1 天（股票价格 = 1）的时候买入，在第 5 天 （股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5-1 = 4 。   
+>     注意你不能在第 1 天和第 2 天接连购买股票，之后再将它们卖出。   
+>     因为这样属于同时参与了多笔交易，你必须在再次购买前出售掉之前的股票。
