update state machine dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -27,3 +27,31 @@
 >输出：4
 >
 >解释：在第 1 天（股票价格 = 1）的时候买入，在第 5 天 （股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5-1 = 4 。注意你不能在第 1 天和第 2 天接连购买股票，之后再将它们卖出。因为这样属于同时参与了多笔交易，你必须在再次购买前出售掉之前的股票。
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[][] dp = new int[prices.length][5];
+    // dp[i][0] 表示一次买入和卖出都没有
+    // dp[i][1] 表示第一次买入
+    // dp[i][2] 表示第一次卖出
+    // dp[i][3] 表示第二次买入
+    // dp[i][4] 表示第二次卖出
+    dp[0][1] = -prices[0];
+    dp[0][3] = -prices[0];
+    for (int i = 1; i < prices.length; i++) {
+      dp[i][0] = dp[i - 1][0];
+      dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+      dp[i][2] = Math.max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+      dp[i][3] = Math.max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
+      dp[i][4] = Math.max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
+    }
+    return dp[prices.length - 1][4];
+    // 注意数据之前传递依赖的关系
+    // 因为要求 dp[N][4] 当中
+    // 最大的值 因此需要求解 dp[N - 1][4] 和 dp[i - 1][3] 的最大值
+    // ......
+  }
+}
+```
+
