--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -55,3 +55,59 @@ class Solution {
 }
 ```
 
+## [卖股票的最佳时机 IV](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/)
+
+### 题目
+
+>给定一个整数数组 prices ，它的第 i 个元素 prices[i] 是一支给定的股票在第 i 天的价格。设计一个算法来计算你所能获取的最大利润。你最多可以完成 k 笔交易。注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+>
+
+### 示例
+
+示例1
+
+>输入：k = 2, prices = [2,4,1]
+>
+>输出：2
+>
+>解释：在第 1 天 (股票价格 = 2) 的时候买入，在第 2 天 (股票价格 = 4) 的时候卖出，这笔交易所能获得利润 = 4-2 = 2 。
+
+示例2
+
+>输入：k = 2, prices = [3,2,6,5,0,3]
+>
+>输出：7
+>
+>解释：在第 2 天 (股票价格 = 2) 的时候买入，在第 3 天 (股票价格 = 6) 的时候卖出, 这笔交易所能获得利润 = 6-2 = 4 。随后，在第 5 天 (股票价格 = 0) 的时候买入，在第 6 天 (股票价格 = 3) 的时候卖出, 这笔交易所能获得利润 = 3-0 = 3 。
+
+```java
+class Solution {
+  public int maxProfit(int k, int[] prices) {
+    if (prices == null || prices.length == 0)
+      return 0;
+    int m = 2 * k + 1;
+    int[][] dp = new int[prices.length][m];
+    // dp[i][0] 表示一次买入和卖出都没有
+    // dp[i][2 * k - 1] 表示第 k 次买入
+    // dp[i][2 * k] 表示第 k 次卖出
+    for (int i = 1; i < m; i += 2) {
+      dp[0][i] = -prices[0];
+    }
+    for (int i = 1; i < prices.length; i++) {
+      dp[i][0] = dp[i - 1][0];
+      for (int j = 2; j < m; j += 2) {
+        dp[i][j - 1] = Math.max(dp[i - 1][j - 1], dp[i - 1][j - 2] - prices[i]);
+        dp[i][j] = Math.max(dp[i - 1][j], dp[i - 1][j - 1] + prices[i]);
+
+      }
+    }
+    return dp[prices.length - 1][2 * k];
+    // 注意数据之前传递依赖的关系
+    // 因为要求 dp[N][4] 当中
+    // 最大的值 因此需要求解 dp[N - 1][4] 和 dp[i - 1][3] 的最大值
+    // ......
+  }
+
+}
+```
+
