update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -28,6 +28,18 @@
 >
 >解释：在第 1 天（股票价格 = 1）的时候买入，在第 5 天 （股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5-1 = 4 。注意你不能在第 1 天和第 2 天接连购买股票，之后再将它们卖出。因为这样属于同时参与了多笔交易，你必须在再次购买前出售掉之前的股票。
 
+这道题目和之前的两道题目不同之处在于，在上篇文章当中的两道题要么是能够购买一次，要么能够购买无数次，而在本道题目当中只能够购买两次，在这种情况下我们应该如何定义各种状态呢？
+
+### 状态表示数组
+
+在这道题目当中我们也是二维数组进行状态的表示，二维数组位`dp[N][5]`，5表示我们有5个状态：
+
+- `dp[N][0]`，表示第N天一次买入和卖出的操作都没有过。
+- `dp[N][1]`，表示第N天已经进行过第一次买入，这个买入可以是在第N天进行买入，也可以在前面N-1天买入，然后在第N天保持状态。
+- `dp[N][2]`，表示第N天已经进行过第一次卖出，这个状态可以是在第N天进行卖出，也可以是在前面N-1天已经卖出，然后在第N天保持状态。
+- `dp[N][3]`，表示第N天已经进行过第二次买入，这个状态可以是在第N天进行买入，也可以是在前面N-1天买入，然后在第N天保持状态。
+- `dp[N][4]`，表示第N天已经进行过第二次卖出，这个状态可以是在第N天进行买入，也可以是在前面N-1天卖出，然后在第N天保持状态。
+
 ```java
 class Solution {
   public int maxProfit(int[] prices) {
