update state machine dp 2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -30,15 +30,17 @@
 
 这道题目和之前的两道题目不同之处在于，在上篇文章当中的两道题要么是能够购买一次，要么能够购买无数次，而在本道题目当中只能够购买两次，在这种情况下我们应该如何定义各种状态呢？
 
-### 状态表示数组
+### 状态表示数组和状态转移
 
-在这道题目当中我们也是二维数组进行状态的表示，二维数组位`dp[N][5]`，5表示我们有5个状态：
+在这道题目当中我们也是二维数组进行状态的表示，二维数组位`dp[N][5]`，5表示我们有5个状态，`dp[N][i]`表示第N天的第i个状态能够多的多大的收益！
 
-- `dp[N][0]`，表示第N天一次买入和卖出的操作都没有过。
+- `dp[N][0]`，表示第N天一次买入和卖出的操作都没有过，那么`dp[N][0] = dp[N - 1][0]`，跟前一天的状态一样，都没有进行股票的买入和卖出，其实也可以直接令`dp[N][0] = 0`，因为没有进行操作我们的收益肯定等于0。
 - `dp[N][1]`，表示第N天已经进行过第一次买入，这个买入可以是在第N天进行买入，也可以在前面N-1天买入，然后在第N天保持状态。
 - `dp[N][2]`，表示第N天已经进行过第一次卖出，这个状态可以是在第N天进行卖出，也可以是在前面N-1天已经卖出，然后在第N天保持状态。
 - `dp[N][3]`，表示第N天已经进行过第二次买入，这个状态可以是在第N天进行买入，也可以是在前面N-1天买入，然后在第N天保持状态。
 - `dp[N][4]`，表示第N天已经进行过第二次卖出，这个状态可以是在第N天进行买入，也可以是在前面N-1天卖出，然后在第N天保持状态。
+
+
 
 ```java
 class Solution {
