update state machine dp 2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -37,9 +37,13 @@
 - `dp[N][0]`，表示第N天一次买入和卖出的操作都没有过，那么`dp[N][0] = dp[N - 1][0]`，跟前一天的状态一样，都没有进行股票的买入和卖出，其实也可以直接令`dp[N][0] = 0`，因为没有进行操作我们的收益肯定等于0。
 - `dp[N][1]`，表示第N天已经进行过第一次买入，这个买入可以是在第N天进行买入，也可以在前面N-1天买入，然后在第N天保持状态。
   - 如果第N天刚刚进行买入，那么我们的收益就是从前一天一次买入和卖出都没有操作转移过来的，那么就有`dp[N][0] - prices[i]`，因为根据上面的分析`dp[N][0] = 0`，那么直接让`dp[N][1] = -prices[i]`即可。
-  - 如果在钱N-1天已经进行了买入，那么在第N天就不行操作，即在第N天收入位0，即`dp[N][1] = dp[N - 1][1]`。
-- `dp[N][2]`，表示第N天已经进行过第一次卖出，这个状态可以是在第N天进行卖出，也可以是在前面N-1天已经卖出，然后在第N天保持状态。
+  - 如果在钱N-1天已经进行了买入，那么在第N天就不行操作，即在第N天收入为0，即`dp[N][1] = dp[N - 1][1]`。
+- `dp[N][2]`，表示第N天已经进行过第一次卖出，这个状态可以是在第N天进行卖出，也可以是在前面N-1天已经卖出，然后在第N天保持状态
+  - 如果在第N天进行第一次卖出那么我们在第N天的收益就等于`prices[i]`，在加上前N-1天买入一次的收益，即`dp[N][2] = dp[N - 1][1]`。
+  - 如果前N-1天已经卖出，那么直接保持状态即可，我们在第N天的收益就为0，那么`dp[N][2] = dp[N - 1][2]`。
 - `dp[N][3]`，表示第N天已经进行过第二次买入，这个状态可以是在第N天进行买入，也可以是在前面N-1天买入，然后在第N天保持状态。
+  - 如果在第N天进行第一次卖出那么我们在第N天的收益就等于`-prices[i]`，在加上前N-1天买入一次的收益，即`dp[N][3] = dp[N - 2][1] - prices[i]`。
+  - 如果前N-1天已经有了第二次买入的操作，那么直接保持状态即可，我们在第N天的收益就为0，那么`dp[N][3] = dp[N - 1][3]`。
 - `dp[N][4]`，表示第N天已经进行过第二次卖出，这个状态可以是在第N天进行买入，也可以是在前面N-1天卖出，然后在第N天保持状态。
 
 
