--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -52,11 +52,17 @@
 
 <img src="../images/dsal/dp/01-dp39.png" alt="01-dp39" style="zoom:80%;" />
 
-我们最终需要得到的结果是`dp[N][4]`，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`
-
 ### 数据流依赖分析和状态转移方程
 
-加入可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了。而根据上面的分析我们知道，对于`dp[N][4]`有两种转移情况
+加入可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了。而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，最终我们的状态转移方程如下：
+
+```java
+dp[i][0] = dp[i - 1][0];
+dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+dp[i][2] = Math.max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+dp[i][3] = Math.max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
+dp[i][4] = Math.max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
+```
 
 ### 代码
 
