--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -54,15 +54,26 @@
 
 ### 数据流依赖分析和状态转移方程
 
-加入可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了。而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，最终我们的状态转移方程如下：
+假如可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了。而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，最终我们的状态转移方程如下：
 
 ```java
 dp[i][0] = dp[i - 1][0];
-dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
-dp[i][2] = Math.max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
-dp[i][3] = Math.max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
-dp[i][4] = Math.max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
+dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+dp[i][2] = max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+dp[i][3] = max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
+dp[i][4] = max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
 ```
+
+### 动态规划设计
+
+在求解动态规划问题的时候通常的步骤有以下几个：
+
+- 寻找能够表示状态的数组`dp`，即我们需要寻找`dp`的含义，分析需要用几纬数组表示具体的状态。
+- 通过分析问题，寻找动态转移公式。
+- 初始化状态数组。
+- 通过分析动态转移方程，确定数组的遍历顺序。
+
+在前文当中我们已经完成了前两步，现在需要对数组进行初始化，第一天我们可以不买入一只股票，那么第一天我们的收益为0，即`dp[0][0] = 0`，我们也可以买入一只股票，即`dp[0][1] = -prices[0]`，我们可以买入一只再卖出，那等于不买，因为同一天价格都一样，即`dp[0][2] = 0`，我们也可以二次买入，也就是先买入再卖出再买入，即`dp[0][3] = -prices[0]`，同样的我们也可以进行两次买入卖出，最终的收益也等于0，即`dp[0][4] = 0`。
 
 ### 代码
 
