--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -52,6 +52,8 @@
 
 <img src="../images/dsal/dp/01-dp39.png" alt="01-dp39" style="zoom:80%;" />
 
+相信看到这里你就应该能够理解为什么这种动态规划叫做**状态机动态规划**，因为在这种动态规划当中数据存在很多状态，而我们需要进行仔细的分析，分析清楚这里面的状态改如何进行转移，进而分析出来各种状态之间的转移关系，即这些状态的**状态机**。
+
 ### 数据流依赖分析和状态转移方程
 
 假如可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了，为什么我们最终的结果是`dp[N][4]`呢？这你可能疑惑万一我买入一次卖出一次能够的到的收益最大呢？根据上文的分析我们是允许在同一天买入和卖出股票的，因此买入卖出一次最终也可以转移到买入卖出两次，因此我们最终需要返回的结果就是`dp[N][4]`。而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，最终我们的状态转移方程如下：
@@ -85,7 +87,7 @@ dp[0][3] = -prices[0];
 dp[0][4] = 0;
 ```
 
-### 代码
+### 示例代码
 
 ```java
 class Solution {
@@ -115,6 +117,32 @@ class Solution {
 ```
 
 上面的代码的时间和空间复杂度分别为$O(n)$和$O(n)$。
+
+### 空间复杂度优化
+
+根据上面的状态转移方程我们可以知道，`dp[i][j]`，只依依赖于`dp[i - 1][j]`和`dp[i - 1][j - 1]`，其实我们可以使用一个单行数组进行优化，优化代码如下：
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[] dp = new int[5];
+    dp[1] = -prices[0];
+    dp[3] = -prices[0];
+    for (int i = 1; i < prices.length; i++) {
+      dp[0] = dp[0]; // 这一行可以不要的 放在这里只是为了状态转移方程的完整
+      dp[1] = Math.max(dp[1], dp[0] - prices[i]);
+      dp[2] = Math.max(dp[2], dp[1] + prices[i]);
+      dp[3] = Math.max(dp[3], dp[2] - prices[i]);
+      dp[4] = Math.max(dp[4], dp[3] + prices[i]);
+    }
+    return dp[4];
+  }
+}
+```
+
+我们现在来简要分析一下上面的代码为什么可行：
+
+比如现在`i=3`，现在要进行更新，现在的`dp`数组还是`i=2`的状态，如果用二维数组来表示的话，现在的单行数组中的`dp[i]`相当于二维数组当中的数据`dp[2][i]`，现在我们需要进行更新了，根据二维数组的动态转移方程。
 
 ## [卖股票的最佳时机 IV](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/)
 
