update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -142,7 +142,37 @@ class Solution {
 
 我们现在来简要分析一下上面的代码为什么可行：
 
-比如现在`i=3`，现在要进行更新，现在的`dp`数组还是`i=2`的状态，如果用二维数组来表示的话，现在的单行数组中的`dp[i]`相当于二维数组当中的数据`dp[2][i]`，现在我们需要进行更新了，根据二维数组的动态转移方程。
+比如现在`i=3`，现在要进行更新，现在的`dp`数组还是`i=2`的状态，如果用二维数组来表示的话，现在的单行数组中的`dp[i]`相当于二维数组当中的数据`dp[2][i]`，假如我们现在需要更新`dp[3][2]`，根据二维数组的动态转移方程，我们需要二维数组第二行的数据`dp[2][2]`，但是此时的单行数组当中的数据还没有更新，也就是说`dp[2] = dp[2][2]`（前面的`dp`表示单行数组，后面的`dp`表表示二维数组的`dp`），因此还是上一个状态的数据，因此更新没有问题。
+
+```java
+dp[i][0] = dp[i - 1][0];
+dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+dp[i][2] = max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+dp[i][3] = max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
+dp[i][4] = max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
+```
+
+根据上面的状态转移方程我们知道`dp[3][2]`依赖于`dp[2][1]`，而`dp[2][1]`相当于`dp[1]`，但是在下面的代码当中，我们在更新`dp[2]`的时候`dp[1]`已经更新了，也就是说`dp[1]`已经是第三行的状态了，而现在更新的时候需要的是第二行的状态。
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[] dp = new int[5];
+    dp[1] = -prices[0];
+    dp[3] = -prices[0];
+    for (int i = 1; i < prices.length; i++) {
+      dp[0] = dp[0]; // 这一行可以不要的 放在这里只是为了状态转移方程的完整
+      dp[1] = Math.max(dp[1], dp[0] - prices[i]);
+      dp[2] = Math.max(dp[2], dp[1] + prices[i]);
+      dp[3] = Math.max(dp[3], dp[2] - prices[i]);
+      dp[4] = Math.max(dp[4], dp[3] + prices[i]);
+    }
+    return dp[4];
+  }
+}
+```
+
+
 
 ## [卖股票的最佳时机 IV](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/)
 
