update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -120,7 +120,7 @@ class Solution {
 
 ### 空间复杂度优化
 
-根据上面的状态转移方程我们可以知道，`dp[i][j]`，只依依赖于`dp[i - 1][j]`和`dp[i - 1][j - 1]`，其实我们可以使用一个单行数组进行优化，优化代码如下：
+其实我们可以使用一个单行数组进行优化，优化代码如下：
 
 ```java
 class Solution {
@@ -152,7 +152,7 @@ dp[i][3] = max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
 dp[i][4] = max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
 ```
 
-根据上面的状态转移方程我们知道`dp[3][2]`依赖于`dp[2][1]`，而`dp[2][1]`相当于`dp[1]`，但是在下面的代码当中，我们在更新`dp[2]`的时候`dp[1]`已经更新了，也就是说`dp[1]`已经是第三行的状态了，而现在更新的时候需要的是第二行的状态。
+根据上面的状态转移方程我们知道`dp[3][2]`依赖于`dp[2][1]`，而`dp[2][1]`相当于`dp[1]`，但是在下面的代码当中，我们在更新`dp[2]`之前`dp[1]`已经更新了，也就是说`dp[1]`已经是第三行的状态了，即`dp[1] = dp[3][1]`，而现在更新的时候需要的是第二行的状态，因此这就不对了。
 
 ```java
 class Solution {
@@ -172,7 +172,7 @@ class Solution {
 }
 ```
 
-
+那为什么上面的代码又可行呢？
 
 ## [卖股票的最佳时机 IV](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/)
 
