--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -56,7 +56,9 @@
 
 ### 数据流依赖分析和状态转移方程
 
-假如可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了，为什么我们最终的结果是`dp[N][4]`呢？这你可能疑惑万一我买入一次卖出一次能够的到的收益最大呢？根据上文的分析我们是允许在同一天买入和卖出股票的，因此买入卖出一次最终也可以转移到买入卖出两次，因此我们最终需要返回的结果就是`dp[N][4]`。而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，最终我们的状态转移方程如下：
+假如可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了，为什么我们最终的结果是`dp[N][4]`呢？这你可能疑惑万一我买入一次卖出一次能够的到的收益最大呢？根据上文的分析我们是允许在同一天买入和卖出股票的，因此买入卖出一次最终也可以转移到买入卖出两次，因此我们最终需要返回的结果就是`dp[N][4]`。
+
+而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，最终我们的状态转移方程如下：
 
 ```java
 dp[i][0] = dp[i - 1][0];
@@ -173,6 +175,10 @@ class Solution {
 ```
 
 那为什么上面的代码又可行呢？
+
+- 如果`dp[1]`是从上一行的`dp[1]`转移而来，那么就是符合我们的想法的，`dp[2]`使用的还是上一个(i - 1行)状态的`dp[1]`，不是本行状态的(第i行)`dp[1]`。
+
+通过上述的优化之后空间复杂度变为$O(1)$。
 
 ## [卖股票的最佳时机 IV](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/)
 
