--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -176,7 +176,8 @@ class Solution {
 
 那为什么上面的代码又可行呢？
 
-- 如果`dp[1]`是从上一行的`dp[1]`转移而来，那么就是符合我们的想法的，`dp[2]`使用的还是上一个(i - 1行)状态的`dp[1]`，不是本行状态的(第i行)`dp[1]`。
+- 如果`dp[1]`是从上一行的`dp[1]`转移而来，那么就是符合我们的想法的，`dp[2]`使用的还是上一个(第2行)状态的`dp[1]`，因为本行状态的(第3行)`dp[1]`和第2行的`dp[1]`相等。
+- 如果`dp[1]`是从`dp[0] - prices[3]`转移过来的，那么在这条语句`dp[2] = Math.max(dp[2], dp[1] + prices[3]);`当中，如果选择的是`dp[2]`那么也没关系，如果选择的是`dp[1] + prices[3]`，那么也没关系因为`dp[1]`减去了`prices[3]`，这一加一减相当于没有收益，这并不影响最后的结果。
 
 通过上述的优化之后空间复杂度变为$O(1)$。
 
