update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -177,7 +177,8 @@ class Solution {
 那为什么上面的代码又可行呢？
 
 - 如果`dp[1]`是从上一行的`dp[1]`转移而来，那么就是符合我们的想法的，`dp[2]`使用的还是上一个(第2行)状态的`dp[1]`，因为本行状态的(第3行)`dp[1]`和第2行的`dp[1]`相等。
-- 如果`dp[1]`是从`dp[0] - prices[3]`转移过来的，那么在这条语句`dp[2] = Math.max(dp[2], dp[1] + prices[3]);`当中，如果选择的是`dp[2]`那么也没关系，如果选择的是`dp[1] + prices[3]`，那么也没关系因为`dp[1]`减去了`prices[3]`，这一加一减相当于没有收益，这并不影响最后的结果。
+- 如果`dp[1]`是从`dp[0] - prices[3]`转移过来的，那么在这条语句`dp[2] = Math.max(dp[2], dp[1] + prices[3]);`当中，如果选择的是`dp[2]`那么也没关系，如果选择的是`dp[1] + prices[3]`，那么也没关系因为`dp[1]`减去了`prices[3]`，这一加一减相当于没有收益，这并不影响最后的结果，因为这一卖一买都是在今天完成的，而最终对结果产生影响的，对最终结果产生影响的肯定是在前面已经买入的操作，而不会是在今天的买入，理解这一点就可以理解上的代码了。
+- 其余代码的影响也是类似的，都可以通过一加一减低消掉，最终都不影响最后的结果。
 
 通过上述的优化之后空间复杂度变为$O(1)$。
 
