update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -209,9 +209,7 @@ class Solution {
 
 ### 问题分析
 
-啊啊啊
-
-
+这个问题和本文当中的第一个问题其实差不多，只不过上面的问题是最多完成两笔交易，而在这个问题当中是最多可以完成`k`笔交易，这个问题相当于上面问题的推广。
 
 ### 代码
 
