update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -209,7 +209,25 @@ class Solution {
 
 ### 问题分析
 
-这个问题和本文当中的第一个问题其实差不多，只不过上面的问题是最多完成两笔交易，而在这个问题当中是最多可以完成`k`笔交易，这个问题相当于上面问题的推广。
+这个问题和本文当中的第一个问题其实差不多，只不过上面的问题是最多完成两笔交易，而在这个问题当中是最多可以完成`k`笔交易，这个问题相当于上面问题的推广，我们再来分析一下上一道题目的动态转移公式：
+
+```java
+dp[i][0] = dp[i - 1][0];
+dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+dp[i][2] = max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+dp[i][3] = max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
+dp[i][4] = max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
+```
+
+上面的公式用一个公式表示就是：
+$$
+dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - 1] + prices[i]);
+$$
+
+
+
+
+
 
 ### 代码
 
