update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -223,7 +223,12 @@ dp[i][4] = max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
 $$
 dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - 1] + prices[i]);
 $$
+现在我们将这个问题进行推广：
 
+- 状态表示
+  - `dp[i][0]` 表示一次买入和卖出都没有。
+  - `dp[i][2 * k - 1]` 表示第 `k` 次买入。
+  - `dp[i][2 * k]` 表示第 `k` 次卖出。
 
 
 
