update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -32,7 +32,7 @@
 
 ### 状态表示数组和状态转移
 
-在这道题目当中我们也是二维数组进行状态的表示，二维数组为`dp[N][5]`，5表示我们有5个状态，`dp[N][i]`表示第N天的第i个状态能够多的多大的收益！
+在这道题目当中我们也是二维数组进行状态的表示，二维数组为`dp[N][5]`，5表示我们有5个状态，`dp[N][i]`表示第N天的第i个状态能够多的多大的收益！**（为了方便下面介绍，假设一天又一个股票，`dp[N][]`表示第N天的状态，对应第N个股票的状态）**
 
 - `dp[N][0]`，表示第N天一次买入和卖出的操作都没有过，那么`dp[N][0] = dp[N - 1][0]`，跟前一天的状态一样，都没有进行股票的买入和卖出，其实也可以直接令`dp[N][0] = 0`，因为没有进行操作我们的收益肯定等于0。
 - `dp[N][1]`，表示第N天已经进行过第一次买入，这个买入可以是在第N天进行买入，也可以在前面N-1天买入，然后在第N天保持状态。
@@ -228,9 +228,9 @@ $$
 - 状态表示
   - `dp[i][0]` 表示一次买入和卖出都没有。
   - `dp[i][2 * k - 1]` 表示第 `k` 次买入。
+    - 根据上文的分析，这个地方类似，有两种状态可以转换成第`k`次买入这个状态。
+      - 如果前`i-1`天已经
   - `dp[i][2 * k]` 表示第 `k` 次卖出。
-
-
 
 
 
