update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -226,6 +226,7 @@ $$
 现在我们将这个问题进行推广：
 
 - 状态表示
+
   - `dp[i][0]` 表示一次买入和卖出都没有。
   - `dp[i][2 * k - 1]` 表示第 `k` 次买入。
     - 根据上文的分析，这个地方类似，有两种状态可以转换成第`k`次买入这个状态。
@@ -235,6 +236,15 @@ $$
     - 同样的，也有两个状态可以转换成这个状态。
       - 如果前`i-1`天已经有`k`次卖出了，则保持前面的状态就行，即`dp[i][2 * k] = dp[i - 1][2 * k]`。
       - 如果前`i-1`天已经有`k`次买入，那么久需要进行买入，即`dp[i][2 * k] = dp[i - 1][2 * k - 1] + prices[i]`。
+
+  根据上面的分析，那么状态转移方程如下（其中`j`是偶数）：
+
+  ```java
+  dp[i][j - 1] = Math.max(dp[i - 1][j - 1], dp[i - 1][j - 2] - prices[i]);
+  dp[i][j] = Math.max(dp[i - 1][j], dp[i - 1][j - 1] + prices[i]);
+  ```
+
+  
 
 ### 代码
 
