update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -177,7 +177,7 @@ class Solution {
 那为什么上面的代码又可行呢？
 
 - 如果`dp[1]`是从上一行的`dp[1]`转移而来，那么就是符合我们的想法的，`dp[2]`使用的还是上一个(第2行)状态的`dp[1]`，因为本行状态的(第3行)`dp[1]`和第2行的`dp[1]`相等。
-- 如果`dp[1]`是从`dp[0] - prices[3]`转移过来的，那么在这条语句`dp[2] = Math.max(dp[2], dp[1] + prices[3]);`当中，如果选择的是`dp[2]`那么也没关系，如果选择的是`dp[1] + prices[3]`，那么也没关系因为`dp[1]`减去了`prices[3]`，这一加一减相当于没有收益，这并不影响最后的结果，因为这一卖一买都是在今天完成的，而最终对结果产生影响的，对最终结果产生影响的肯定是在前面已经买入的操作（比如第2行的`dp[1]`就表示在之前进行第一次买入），而不会是在今天的买入，理解这一点就可以理解上的代码了。
+- 如果`dp[1]`是从`dp[0] - prices[3]`转移过来的，那么在这条语句`dp[2] = Math.max(dp[2], dp[1] + prices[3]);`当中，如果选择的是`dp[2]`那么也没关系，如果选择的是`dp[1] + prices[3]`，那么也没关系因为`dp[1]`减去了`prices[3]`，这一加一减相当于没有收益，这并不影响最后的结果，因为这一卖一买都是在今天完成的，而对最终结果产生影响的肯定是在前面已经买入的操作（比如第2行的`dp[1]`就表示在之前进行第一次买入），而不会是在今天的买入，理解这一点就可以理解上的代码了。
 - 其余代码的影响也是类似的，都可以通过一加一减低消掉，最终都不影响最后的结果。
 
 通过上述的优化之后空间复杂度变为$O(1)$。
@@ -221,7 +221,7 @@ dp[i][4] = max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
 
 上面的公式用一个公式表示就是：
 $$
-dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - 1] + prices[i]);
+dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - 1] \pm prices[i]);
 $$
 现在我们将这个问题进行推广：
 
@@ -240,11 +240,11 @@ $$
   根据上面的分析，那么状态转移方程如下（其中`j`是偶数）：
 
   ```java
-  dp[i][j - 1] = Math.max(dp[i - 1][j - 1], dp[i - 1][j - 2] - prices[i]);
-  dp[i][j] = Math.max(dp[i - 1][j], dp[i - 1][j - 1] + prices[i]);
+  dp[i][j - 1] = max(dp[i - 1][j - 1], dp[i - 1][j - 2] - prices[i]);
+  dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - 1] + prices[i]);
   ```
 
-  
+  同理我们最终需要返回的结果就是`dp[N][2 * k]`。
 
 ### 代码
 
@@ -275,4 +275,14 @@ class Solution {
 
 }
 ```
+
+## 总结
+
+在本篇文章当中主要给大家介绍了另外两种股票问题，在这两个股票问题当中都有许多的状态，状态之间的转化也比较复杂，在仔细分析上面两个问题的状态转化之后相信你已经能够理解**状态机动态规划**了，这种含有比较复杂的状态之间的变化就叫做**状态机动态规划**，这种问题一般分析起来还是比较复杂的。
+
+更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
 
