update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在前面的文章[这种动态规划你见过吗——状态机动态规划之股票问题(上)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485286&idx=1&sn=3d0a6a1c2e62ba770d8427c6dd732973&chksm=cf0c9b6ff87b1279d46c775001fd77b8e1437d4001a6c8a1ca8db090eadb4174af1058a1aadf&token=1125062744&lang=zh_CN#rd)我们已经介绍了两个基本的股票问题，并且对**状态机动态规划**做出了简要的介绍在动态规划当中**状态机**当中的状态是如何进行转换的，但是在前面的两个问题当中**状态**的个数比较少，可能不方便大家理解**状态机**的含义，在本篇文章所谈到的两个问题当中状态的数目还是比较多的，因此对于大家深入理解**状态机动态规划**可能会更方便简单一点。
+在前面的文章[这种动态规划你见过吗——状态机动态规划之股票问题(上)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485286&idx=1&sn=3d0a6a1c2e62ba770d8427c6dd732973&chksm=cf0c9b6ff87b1279d46c775001fd77b8e1437d4001a6c8a1ca8db090eadb4174af1058a1aadf&token=1125062744&lang=zh_CN#rd)我们已经介绍了两个基本的股票问题，并且对**状态机动态规划**做出了简要的介绍，以及在**状态机**当中的状态是如何进行转换的，但是在前面的两个问题当中**状态**的个数比较少，可能不方便大家理解**状态机**的含义，在本篇文章所谈到的两个问题当中状态的数目还是比较多的，因此对于大家深入理解**状态机动态规划**可能会好一点。
 
 ## [卖股票的最佳时机 III](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iii/)
 
@@ -279,6 +279,8 @@ class Solution {
 ## 总结
 
 在本篇文章当中主要给大家介绍了另外两种股票问题，在这两个股票问题当中都有许多的状态，状态之间的转化也比较复杂，在仔细分析上面两个问题的状态转化之后相信你已经能够理解**状态机动态规划**了，这种含有比较复杂的状态之间的变化就叫做**状态机动态规划**，这种问题一般分析起来还是比较复杂的。
+
+---
 
 更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
 
