update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -28,7 +28,7 @@
 >
 >解释：在第 1 天（股票价格 = 1）的时候买入，在第 5 天 （股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5-1 = 4 。注意你不能在第 1 天和第 2 天接连购买股票，之后再将它们卖出。因为这样属于同时参与了多笔交易，你必须在再次购买前出售掉之前的股票。
 
-这道题目和之前的两道题目不同之处在于，在上篇文章当中的两道题要么是能够购买一次，要么能够购买无数次，而在本道题目当中只能够购买两次，在这种情况下我们应该如何定义各种状态呢？
+这道题目跟之前的两道题目不同之处在于，在上篇文章当中的两道题要么是能够购买一次，要么能够购买无数次，而在本道题目当中只能够购买两次，在这种情况下我们应该如何定义各种状态呢？
 
 ### 状态表示数组和状态转移
 
@@ -37,7 +37,7 @@
 - `dp[N][0]`，表示第N天一次买入和卖出的操作都没有过，那么`dp[N][0] = dp[N - 1][0]`，跟前一天的状态一样，都没有进行股票的买入和卖出，其实也可以直接令`dp[N][0] = 0`，因为没有进行操作我们的收益肯定等于0。
 - `dp[N][1]`，表示第N天已经进行过第一次买入，这个买入可以是在第N天进行买入，也可以在前面N-1天买入，然后在第N天保持状态。
   - 如果第N天刚刚进行买入，那么我们的收益就是从前一天一次买入和卖出都没有操作转移过来的，那么就有`dp[N][0] - prices[i]`，因为根据上面的分析`dp[N][0] = 0`，那么直接让`dp[N][1] = -prices[i]`即可。
-  - 如果在钱N-1天已经进行了买入，那么在第N天就不行操作，即在第N天收入为0，即`dp[N][1] = dp[N - 1][1]`。
+  - 如果在前N-1天已经进行了买入，那么在第N天就不行操作，即在第N天收入为0，即`dp[N][1] = dp[N - 1][1]`。
 - `dp[N][2]`，表示第N天已经进行过第一次卖出，这个状态可以是在第N天进行卖出，也可以是在前面N-1天已经卖出，然后在第N天保持状态
   - 如果在第N天进行第一次卖出那么我们在第N天的收益就等于`prices[i]`，在加上前N-1天买入一次的收益，即`dp[N][2] = dp[N - 1][1] + prices[i]`。
   - 如果前N-1天已经卖出，那么直接保持状态即可，我们在第N天的收益就为0，那么`dp[N][2] = dp[N - 1][2]`。
@@ -52,7 +52,7 @@
 
 <img src="../images/dsal/dp/01-dp39.png" alt="01-dp39" style="zoom:80%;" />
 
-相信看到这里你就应该能够理解为什么这种动态规划叫做**状态机动态规划**，因为在这种动态规划当中数据存在很多状态，而我们需要进行仔细的分析，分析清楚这里面的状态改如何进行转移，进而分析出来各种状态之间的转移关系，即这些状态的**状态机**。
+相信看到这里你就应该能够理解为什么这种动态规划叫做**状态机动态规划**，因为在这种动态规划当中数据存在很多状态，而我们需要进行仔细的分析，分析清楚这里面的状态改如何进行转移，进而分析出来各种状态之间的转移关系，这种模式跟状态机非常像，因此叫做**状态机动态规划**。
 
 ### 数据流依赖分析和状态转移方程
 
