update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -56,9 +56,9 @@
 
 ### 数据流依赖分析和状态转移方程
 
-假如可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了，为什么我们最终的结果是`dp[N][4]`呢？这你可能疑惑万一我买入一次卖出一次能够的到的收益最大呢？根据上文的分析我们是允许在同一天买入和卖出股票的，因此买入卖出一次最终也可以转移到买入卖出两次，因此我们最终需要返回的结果就是`dp[N][4]`。
+假如可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了，为什么我们最终的结果是`dp[N][4]`呢？这你可能疑惑万一我买入一次卖出一次能够的到的收益最大呢？我们是允许在同一天多次买入和卖出股票的，而在同一天买入和卖出股票收益为0，所以不影响最后的结果，因此买入卖出一次最终也可以转移到买入卖出两次（其中一次在同一天买入和卖出即可，我们在对数组进行初始化的时候就需要进行多次买入和卖出（可以看下文当中对数组初始化的分析）），因此我们最终需要返回的结果就是`dp[N][4]`。
 
-而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，最终我们的状态转移方程如下：
+而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，每个数据都是需要选择转移之后价值最大的那个，最终我们的状态转移方程如下：
 
 ```java
 dp[i][0] = dp[i - 1][0];
@@ -88,6 +88,8 @@ dp[0][3] = 0;
 dp[0][3] = -prices[0];
 dp[0][4] = 0;
 ```
+
+根据状态转移方程，我们知道第`i`天依赖于第`i-1`天的数据，因此我们遍历的顺序为从前到后进行遍历。
 
 ### 代码
 
