update state machien dp v2

--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -146,7 +146,7 @@ class Solution {
 
 我们现在来简要分析一下上面的代码为什么可行：
 
-比如现在`i=3`，现在要进行更新，现在的`dp`数组还是`i=2`的状态，如果用二维数组来表示的话，现在的单行数组中的`dp[i]`相当于二维数组当中的数据`dp[2][i]`，假如我们现在需要更新`dp[3][2]`，根据二维数组的动态转移方程，我们需要二维数组第二行的数据`dp[2][2]`，但是此时的单行数组当中的数据还没有更新，也就是说`dp[2] = dp[2][2]`（前面的`dp`表示单行数组，后面的`dp`表表示二维数组的`dp`），因此还是上一个状态的数据，因此更新没有问题。
+比如现在`i=3`，现在要进行更新，现在的`dp`数组还是`i=2`的状态，如果用二维数组来表示的话，现在的单行数组中的`dp[i]`相当于二维数组当中的数据`dp[2][i]`，假如我们现在需要更新`dp[3][2]`，根据二维数组的动态转移方程，我们需要二维数组第二行的数据`dp[2][2]`，但是此时的单行数组当中的数据还没有更新，也就是说`dp[2]`等于` dp[2][2]`（前面的`dp`表示单行数组，后面的`dp`表表示二维数组的`dp`），因此还是上一个状态的数据，因此更新没有问题。
 
 ```java
 dp[i][0] = dp[i - 1][0];
@@ -179,7 +179,7 @@ class Solution {
 那为什么上面的代码又可行呢？
 
 - 如果`dp[1]`是从上一行的`dp[1]`转移而来，那么就是符合我们的想法的，`dp[2]`使用的还是上一个(第2行)状态的`dp[1]`，因为本行状态的(第3行)`dp[1]`和第2行的`dp[1]`相等。
-- 如果`dp[1]`是从`dp[0] - prices[3]`转移过来的，那么在这条语句`dp[2] = Math.max(dp[2], dp[1] + prices[3]);`当中，如果选择的是`dp[2]`那么也没关系，如果选择的是`dp[1] + prices[3]`，那么也没关系因为`dp[1]`减去了`prices[3]`，这一加一减相当于没有收益，这并不影响最后的结果，因为这一卖一买都是在今天完成的，而对最终结果产生影响的肯定是在前面已经买入的操作（比如第2行的`dp[1]`就表示在之前进行第一次买入），而不会是在今天的买入，理解这一点就可以理解上的代码了。
+- 如果`dp[1]`是从`dp[0] - prices[3]`转移过来的，那么在这条语句`dp[2] = Math.max(dp[2], dp[1] + prices[3]);`当中，如果选择的是`dp[2]`那么也没关系，因为他跟`dp[1]`没有关系。如果选择的是`dp[1] + prices[3]`，那么也没关系因为`dp[1]`减去了`prices[3]`，这一加一减相当于没有收益，这并不影响最后的结果，因为这一卖一买都是在今天完成的，而对最终结果产生影响的肯定是在前面已经买入的操作（比如第2行的`dp[1]`就表示在之前进行第一次买入），而不会是在今天的买入，理解这一点就可以理解上的代码了。
 - 其余代码的影响也是类似的，都可以通过一加一减低消掉，最终都不影响最后的结果。
 
 通过上述的优化之后空间复杂度变为$O(1)$。
@@ -247,6 +247,10 @@ $$
   ```
 
   同理我们最终需要返回的结果就是`dp[N][2 * k]`。
+
+- 数组初始化
+
+  - 根据我们的分析，在买入之前必须卖出，因此在第一行当中所有的买入状态的价值都是`-pirces[0]`，所有的卖出状态的价值都是0，因为买入之后再卖出久相当于没有买卖一样。
 
 ### 代码
 
