--- a/datastructr&algorithm/10状态机动态规划02.md
+++ b/datastructr&algorithm/10状态机动态规划02.md
@@ -32,14 +32,14 @@
 
 ### 状态表示数组和状态转移
 
-在这道题目当中我们也是二维数组进行状态的表示，二维数组为`dp[N][5]`，5表示我们有5个状态，`dp[N][i]`表示第N天的第i个状态能够多的多大的收益！**（为了方便下面介绍，假设一天有一个股票，`dp[N][]`表示第N天的状态，对应第N个股票的状态）**
+在这道题目当中我们也是二维数组进行状态的表示，二维数组为`dp[N][5]`，5表示我们有5个状态，`dp[N][i]`表示第N天的第i个状态能够多大的收益！**（为了方便下面介绍，假设一天有一个股票，`dp[N][]`表示第N天的状态，对应第N个股票的状态）**
 
 - `dp[N][0]`，表示第N天一次买入和卖出的操作都没有过，那么`dp[N][0] = dp[N - 1][0]`，跟前一天的状态一样，都没有进行股票的买入和卖出，其实也可以直接令`dp[N][0] = 0`，因为没有进行操作我们的收益肯定等于0。
 - `dp[N][1]`，表示第N天已经进行过第一次买入，这个买入可以是在第N天进行买入，也可以在前面N-1天买入，然后在第N天保持状态。
   - 如果第N天刚刚进行买入，那么我们的收益就是从前一天一次买入和卖出都没有操作转移过来的，那么就有`dp[N][0] - prices[i]`，因为根据上面的分析`dp[N][0] = 0`，那么直接让`dp[N][1] = -prices[i]`即可。
   - 如果在前N-1天已经进行了买入，那么在第N天就不行操作，即在第N天收入为0，即`dp[N][1] = dp[N - 1][1]`。
 - `dp[N][2]`，表示第N天已经进行过第一次卖出，这个状态可以是在第N天进行卖出，也可以是在前面N-1天已经卖出，然后在第N天保持状态
-  - 如果在第N天进行第一次卖出那么我们在第N天的收益就等于`prices[i]`，在加上前N-1天买入一次的收益，即`dp[N][2] = dp[N - 1][1] + prices[i]`。
+  - 如果在第N天进行第一次卖出那么我们在第N天的收益就等于`prices[i]`，再加上前N-1天买入一次的收益，即`dp[N][2] = dp[N - 1][1] + prices[i]`。
   - 如果前N-1天已经卖出，那么直接保持状态即可，我们在第N天的收益就为0，那么`dp[N][2] = dp[N - 1][2]`。
 - `dp[N][3]`，表示第N天已经进行过第二次买入，这个状态可以是在第N天进行买入，也可以是在前面N-1天买入，然后在第N天保持状态。
   - 如果在第N天进行第二次买入那么我们在第N天的收益就等于`-prices[i]`，再加上前N-1天买入卖出一次的收益，即`dp[N][3] = dp[N - 1][2] - prices[i]`。
@@ -48,15 +48,15 @@
   - 如果是在第N天卖出，那么在第N天的收益为`prices[i]`，再加上前N-1天买入两次卖出一次的收益`dp[N][3]`，那么`dp[N][4] = dp[N - 1][3] + prices[i]`。
   - 如果是前N-1天已经买入卖出两次了，那么直接保持前一天的状态即可，即`dp[N][4] = dp[N-1][4]`。
 
-根据上面的分析我门可以得到下面的状态机（状态转移图）：
+根据上面的分析我们可以得到下面的状态机（状态转移图）：
 
 <img src="../images/dsal/dp/01-dp39.png" alt="01-dp39" style="zoom:80%;" />
 
-相信看到这里你就应该能够理解为什么这种动态规划叫做**状态机动态规划**，因为在这种动态规划当中数据存在很多状态，而我们需要进行仔细的分析，分析清楚这里面的状态改如何进行转移，进而分析出来各种状态之间的转移关系，这种模式跟状态机非常像，因此叫做**状态机动态规划**。
+相信看到这里你就应该能够理解为什么这种动态规划叫做**状态机动态规划**，因为在这种动态规划当中数据存在很多状态，而我们需要进行仔细的分析，分析清楚这里面的状态该如何进行转移，进而分析出来各种状态之间的转移关系，这种模式跟状态机非常像，因此叫做**状态机动态规划**。
 
 ### 数据流依赖分析和状态转移方程
 
-假如可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了，为什么我们最终的结果是`dp[N][4]`呢？这你可能疑惑万一我买入一次卖出一次能够的到的收益最大呢？我们是允许在同一天多次买入和卖出股票的，而在同一天买入和卖出股票收益为0，所以不影响最后的结果，因此买入卖出一次最终也可以转移到买入卖出两次（其中一次在同一天买入和卖出即可，我们在对数组进行初始化的时候就需要进行多次买入和卖出（可以看下文当中对数组初始化的分析）），因此我们最终需要返回的结果就是`dp[N][4]`。
+假如可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了，为什么我们最终的结果是`dp[N][4]`呢？这你可能疑惑万一我买入一次卖出一次能够得到的收益最大呢？我们是允许在同一天多次买入和卖出股票的，而在同一天买入和卖出股票收益为0，所以不影响最后的结果，因此买入卖出一次最终也可以转移到买入卖出两次（其中一次在同一天买入和卖出即可，我们在对数组进行初始化的时候就需要进行多次买入和卖出（可以看下文当中对数组初始化的分析）），因此我们最终需要返回的结果就是`dp[N][4]`。
 
 而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，每个数据都是需要选择转移之后价值最大的那个，最终我们的状态转移方程如下：
 
@@ -233,11 +233,11 @@ $$
   - `dp[i][2 * k - 1]` 表示第 `k` 次买入。
     - 根据上文的分析，这个地方类似，有两种状态可以转换成第`k`次买入这个状态。
       - 如果前`i-1`天已经有`k`次买入了，则保持前面的状态就行，即`dp[i][2 * k - 1] = dp[i - 1][2 * k - 1]`。
-      - 如果前`i-1`天已经有`k-1`次买入和卖出了，那么久需要进行买入，即`dp[i][2 * k - 1] = dp[i - 1][2 * k - 2]- prices[i]` 。
+      - 如果前`i-1`天已经有`k-1`次买入和卖出了，那么就需要进行买入，即`dp[i][2 * k - 1] = dp[i - 1][2 * k - 2]- prices[i]` 。
   - `dp[i][2 * k]` 表示第 `k` 次卖出。
     - 同样的，也有两个状态可以转换成这个状态。
       - 如果前`i-1`天已经有`k`次卖出了，则保持前面的状态就行，即`dp[i][2 * k] = dp[i - 1][2 * k]`。
-      - 如果前`i-1`天已经有`k`次买入，那么久需要进行买入，即`dp[i][2 * k] = dp[i - 1][2 * k - 1] + prices[i]`。
+      - 如果前`i-1`天已经有`k`次买入，那么就需要进行买入，即`dp[i][2 * k] = dp[i - 1][2 * k - 1] + prices[i]`。
 
   根据上面的分析，那么状态转移方程如下（其中`j`是偶数）：
 
@@ -250,7 +250,7 @@ $$
 
 - 数组初始化
 
-  - 根据我们的分析，在买入之前必须卖出，因此在第一行当中所有的买入状态的价值都是`-pirces[0]`，所有的卖出状态的价值都是0，因为买入之后再卖出久相当于没有买卖一样。
+  - 根据我们的分析，在买入之前必须卖出，因此在第一行当中所有的买入状态的价值都是`-pirces[0]`，所有的卖出状态的价值都是0，因为买入之后再卖出就相当于没有买卖一样。
 
 ### 代码
 
