update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -53,7 +53,14 @@
 - `dp[i][2]`，表示在第`i`支股票的时候手中不含有股票，可以转移到这个状态的状态一共有两种：
 
   - 在遍历到第`i-1`支股票的时候手中本来就不含有股票，那么我们只需要保持状态即可，即`dp[i][2] = dp[i - 1][2]`。
-  - 
+  - 在遍历到第`i-1`支股票的时候手中含有股票，那么我们需要将这个股票进行售出，即`dp[i][2] = dp[i - 1][1] + prices[i]`。
+  - 综合以上两种情况：
 
-- `dp[i][3]`，表示在第`i`支股票的时候是处在冷冻期。
+  $$
+  dp[i][2] = max(dp[i - 1][2], dp[i - 1][1] + prices[i])
+  $$
+
+- `dp[i][3]`，表示在第`i`支股票的时候是处在冷冻期，这个状态只能由一个状态转移过来，那就是前一天手中没有股票，即`dp[i][3] = dp[i][2]`。
+
+
 
