--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -64,3 +64,46 @@
 
 
 
+### 代码
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    // dp[i][0] 表示一次买入和卖出操作都没有 这个值始终等于0，可以不用这个状态
+    // 但是为了完整将这个状态留下来了
+    // dp[i][1] 表示持有股票
+    // dp[i][2] 表示不持有股票
+    // dp[i][3] 卖出操作之后的冷冻期
+    int[][] dp = new int[prices.length][4];
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[i][1] = Math.max(Math.max(dp[i - 1][1], dp[i - 1][3] - prices[i]),
+          dp[i][0] - prices[i]); // 因为dp[i][0] 始终等于0 因此这里可以直接写 -prices[i] 也行
+      dp[i][2] = Math.max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+      dp[i][3] = dp[i - 1][2];
+    }
+    return Math.max(dp[prices.length - 1][2], dp[prices.length - 1][3]);
+  }
+}
+```
+
+### 数组优化
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[][] dp = new int[2][4];
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[i & 1][1] = Math.max(Math.max(dp[(i - 1) & 1][1], dp[(i - 1) & 1][3] - prices[i]),
+          dp[i & 1][0] - prices[i]);
+      dp[i & 1][2] = Math.max(dp[(i - 1) & 1][2], dp[(i - 1) & 1][1] + prices[i]);
+      dp[i & 1][3] = dp[(i - 1) & 1][2];
+    }
+    return Math.max(dp[(prices.length - 1) & 1][2], dp[(prices.length - 1) & 1][3]);
+  }
+}
+```
+
+
+
