update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -62,7 +62,9 @@
 
 - `dp[i][3]`，表示在第`i`支股票的时候是处在冷冻期，这个状态只能由一个状态转移过来，那就是前一天手中没有股票，即`dp[i][3] = dp[i][2]`。
 
+### 数组的初始化和遍历顺序
 
+根据上面的分析我们可以知道，在遍历到第一支股票的时候如果持有股票的话就需要进行买入，那么买入的状态`dp[0][1]`的值就等于`-prices[0]`，卖出的状态收益为0，冷静期的状态也等于0。根据状态转移方程第`i`行的数据以来第`i-1`行，因此从前往后遍历就行。
 
 ### 代码
 
@@ -86,6 +88,31 @@ class Solution {
   }
 }
 ```
+
+因为`dp[i][0]`始终等于0，所以将将所由含`dp[i][0]`的地方都可以删除，因此下面的代码也是正确的。
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    // dp[i][0] 表示一次买入和卖出操作都没有 这个值始终等于0，可以不用这个状态
+    // 但是为了完整将这个状态留下来了
+    // dp[i][1] 表示持有股票
+    // dp[i][2] 表示不持有股票
+    // dp[i][3] 卖出操作之后的冷冻期
+    int[][] dp = new int[prices.length][4];
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[i][1] = Math.max(Math.max(dp[i - 1][1], dp[i - 1][3] - prices[i]),
+          -prices[i]); 
+      dp[i][2] = Math.max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+      dp[i][3] = dp[i - 1][2];
+    }
+    return Math.max(dp[prices.length - 1][2], dp[prices.length - 1][3]);
+  }
+}
+```
+
+
 
 ### 数组优化
 
