update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -112,9 +112,9 @@ class Solution {
 }
 ```
 
+### 数组优化——滚动数组
 
-
-### 数组优化
+在上面的状态转移方程当中我们始终只使用了两行的数据，因此我们可以只使用一个两行的二维数组，然后进行交替使用（对i求2的余数就可以了）就可以了，代码如下：
 
 ```java
 class Solution {
