update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -42,8 +42,8 @@
 - `dp[i][1]`，表示在遍历到第`i`支股票的时候手中含有股票，这个情况可以由**三**种情况转移过来：
 
   - 在遍历到第`i-1`支股票的时候手中已经存在股票了，这个时候只需要保持状态，那么在第`i`支股票的时候的收益和第`i-1`支股票的收益是相等的，即`dp[i][1] = dp[i - 1][1]`。
-  - 另一中情况就是在遍历到第`i-1`支股票的时候手中不存在股票，那么这个时候要想手中存在股票就需要进行买入了，那么久需要花费`prices[i]`，那么在遍历到第`i`支股票的时候收益等于`dp[i][1] = dp[i - 1][0] - prices[i]`。
-  - 第三种情况是前一天是处于冷冻期，那么现在是可以进行买入的，即`dp[i][1] = dp[i - 1][3]`，其中`dp[i][3]`表示遍历到第`i`支股票的时候处于冷冻期的收益。
+  - 第二种情况就是在遍历到第`i-1`支股票的时候手中不存在股票，那么这个时候要想手中存在股票就需要进行买入了，那么久需要花费`prices[i]`，那么在遍历到第`i`支股票的时候收益等于`dp[i][1] = dp[i - 1][0] - prices[i]`。
+  - 第三种情况是前一天是处于冷冻期（这里所谈到的冷冻期并不只是前2天卖出，导致的前一天的冷冻期，还有可能是更早之前卖出的，然后保持它的状态），那么现在是可以进行买入的，即`dp[i][1] = dp[i - 1][3]`，其中`dp[i][3]`表示遍历到第`i`支股票的时候处于冷冻期的收益。
   - 综合以上三种情况：
 
   $$
@@ -60,7 +60,7 @@
   dp[i][2] = max(dp[i - 1][2], dp[i - 1][1] + prices[i])
   $$
 
-- `dp[i][3]`，表示在第`i`支股票的时候是处在冷冻期，这个状态只能由一个状态转移过来，那就是前一天手中没有股票，即`dp[i][3] = dp[i][2]`。
+- `dp[i][3]`，表示在第`i`支股票的时候是处在冷冻期，这个状态只能由一个状态转移过来，那就是前一天手中没有股票（因为进行卖出了），即`dp[i][3] = dp[i][2]`。
 
 ### 数组的初始化和遍历顺序
 
@@ -132,5 +132,38 @@ class Solution {
 }
 ```
 
+## [买卖股票的最佳时机含手续费](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-with-transaction-fee/)
 
+### 题目
+
+>给定一个整数数组 prices，其中 prices[i]表示第 i 天的股票价格 ；整数 fee 代表了交易股票的手续费用。
+>
+>你可以无限次地完成交易，但是你每笔交易都需要付手续费。如果你已经购买了一个股票，在卖出它之前你就不能再继续购买股票了。
+>
+>返回获得利润的最大值。
+>
+>注意：这里的一笔交易指买入持有并卖出股票的整个过程，每笔交易你只需要为支付一次手续费。
+>
+
+### 示例
+
+示例1
+
+```
+输入：prices = [1, 3, 2, 8, 4, 9], fee = 2
+输出：8
+解释：能够达到的最大利润:  
+在此处买入 prices[0] = 1
+在此处卖出 prices[3] = 8
+在此处买入 prices[4] = 4
+在此处卖出 prices[5] = 9
+总利润: ((8 - 1) - 2) + ((9 - 4) - 2) = 8
+```
+
+示例2
+
+```
+输入：prices = [1,3,7,5,10,3], fee = 3
+输出：6
+```
 
